update to spring boot 3.2 & update components see issue mirror/backend/service-app-admin#68